--- a/src/components/reuseable/Banreuseable.css
+++ b/src/components/reuseable/Banreuseable.css
@@ -18,3 +18,9 @@
     font-size: 28px;
     margin-top: 18px;
 }
+.card p{
+    font-family: "Poppins", sans-serif;
+    font-size: 18px;
+    margin-top: 18px;
+    font-weight: 400;
+}
