--- a/src/components/reuseable/Banreuseable.css
+++ b/src/components/reuseable/Banreuseable.css
@@ -6,13 +6,27 @@
     background-color: #fff;
     border-radius: 12px;
     margin-top: 20px;
-    -webkit-border-radius: 12px;
-    -moz-border-radius: 12px;
-    -ms-border-radius: 12px;
-    -o-border-radius: 12px;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+}
+.card:hover{
+    border: 1px solid transparent;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .card i{
     font-size: 48px;
+    color: grey;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+}
+.card:hover i{
+    color: #adff00;
 }
 .card h3{
     font-size: 28px;
