--- a/src/components/reuseable/Banreuseable.css
+++ b/src/components/reuseable/Banreuseable.css
@@ -1,7 +1,7 @@
 .card{
     display: flex;
     justify-content: space-between;
-    padding: 48px;
+    padding: 48px 40px;
     border: 1px solid #e0e0e0;
     background-color: #fff;
     border-radius: 12px;
