--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -2,6 +2,15 @@
 .menu_bg{
     padding: 25px 0 !important;
 }
+.Mir_name h3{
+    font-family: "Poppins", sans-serif;
+    font-size: 48px;
+    font-weight: 600;
+    color: #ff7300;
+}
+.Mir_name h3 span{
+    color: #00AAFF;
+}
 .nav_main_one{
     display: none;
 }
@@ -14,7 +23,7 @@
 .nav_main{
     position: fixed;
     top: 50%;
-    right: 70px;
+    right: 90px;
     transform: translateY(-50%
     );
     -webkit-transform: translateY(-50%);
@@ -102,7 +111,7 @@
 .nav_social{
     position: fixed;
     top: 50%;
-    left: 30px;
+    left: 90px;
     transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
@@ -110,7 +119,7 @@
     -o-transform: translateY(-50%);
 }
 .nav_social li{
-    margin: 10px 0;
+    margin: 20px 0;
 }
 .nav_social li a.fac1{
     display: inline-block;
