--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,5 +1,6 @@
 .about{
     margin-top: 60px;
+    justify-items: center;
 }
 .about_main{
     padding: 70px 25px;
@@ -12,11 +13,11 @@
 }
 .about_main img{
     width: 100%;
-    border-radius: 18px;
-    -webkit-border-radius: 18px;
-    -moz-border-radius: 18px;
-    -ms-border-radius: 18px;
-    -o-border-radius: 18px;
+    border-radius: 18px ;
+    -webkit-border-radius: 18px ;
+    -moz-border-radius: 18px ;
+    -ms-border-radius: 18px ;
+    -o-border-radius: 18px ;
 }
 .about_text h4{
     font-family: "Poppins", sans-serif;
@@ -34,10 +35,11 @@
 }
 .about_text p{
     font-family: "Poppins", sans-serif;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 400;
     color: #615978;
     margin-top: 1rem;
+    text-align: justify;
 }
 .add_text h4{
     font-family: "Poppins", sans-serif;
