--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -31,7 +31,9 @@
     display: block;
 }
 .name strong{
-    color: #adff00;
+    background-image: linear-gradient(to right, #0575E6, #0730c5);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
     font-weight: 600;
 }
 .index-module_type__E-SaG{
@@ -51,7 +53,7 @@
     font-weight: 700;
     color: #222;
     letter-spacing: 1px;
-    background-color: #adff00;
+    background-image: linear-gradient(to right, #0575E6, #0730c5);
     text-transform: uppercase;
     padding: 15px 42px;
     border-radius: 5px;
@@ -73,11 +75,11 @@
     font-family: "Poppins", sans-serif;
     font-size: 20px;
     font-weight: 700;
-    color: #fff ;
+    color: #0575E6 ;
     letter-spacing: 1px;
     background-color: #222;
     text-transform: uppercase;
-    border: 2px solid #adff00;
+    border: 2px solid #0730c5;
     padding: 13px 40px;
     border-radius: 5px;
     transition: 0.5s;
@@ -91,8 +93,8 @@
     -o-transition: 0.5s;
 }
 .ban_btn .btn_two:hover{
-    background-color: #adff00;
-    color: #222;
+    background-image: linear-gradient(to left, #0575E6, #0730c5);
+    color: white;
     border: 2px solid transparent;
 }
 .world_main{
@@ -148,3 +150,16 @@
 .cli_four{
     text-align: center;
 }
+
+@media(max-width: 1199px){
+    .ban_btn{
+        display: flex;
+        flex-wrap: wrap;
+        width: 100v;
+        justify-content: center;
+        row-gap: 20px;
+    }
+    .world_text p {
+        padding: 0px;
+    }
+};
